--- a/Web/WarehouseApp.Web/wwwroot/css/site.css
+++ b/Web/WarehouseApp.Web/wwwroot/css/site.css
@@ -76,3 +76,21 @@ body {
 .card {
     margin: 10px !important;
 }
+.card-img-top {
+    display: block;
+    max-height: 253px;
+    max-width: 253px
+}
+.product-img {
+    display: block;
+    max-width: 500px;
+    max-height: 500px;
+    width: auto;
+    height: auto;
+}
+
+.product-description {
+    background-color: #f8f8f8;
+    padding: 35px;
+    margin-bottom: 30px;
+}
