Major restock bug fix + minor css changes
Fixed a bug, where restocking a product would always add a new record, even when an identical record already exists

--- a/Web/WarehouseApp.Web/Views/Products/Product.cshtml
+++ b/Web/WarehouseApp.Web/Views/Products/Product.cshtml
@@ -24,11 +24,11 @@
                     <h3 class="item-title">Product Details</h3>
                     <p>Description:</p>
                     <p class="item-description">
-                        <b> @Model.Description</b>
+                       <b> @Model.Description</b>
                     </p>
                     <p>Price: <b>@Model.Price</b></p>
                     <p>Total Quantity: <b>@Model.Quantity</b></p>
-                    <p>Available in cupboards: gethub</p>
+                    <p>Available in cupboards:</p>
                 </div>
             </div>
         </div>
