--- a/Web/WarehouseApp.Web/Views/Products/Cupboard.cshtml
+++ b/Web/WarehouseApp.Web/Views/Products/Cupboard.cshtml
@@ -10,7 +10,10 @@
     @foreach (var product in this.Model.Products)
     {
         <div class="card col-md-3" style="width: 18rem;">
-            <img src="@product.ImageUrl" class="card-img-top" alt="...">
+            <div class="image-container">
+                <img src="@product.ImageUrl" class="card-img-top" alt="...">
+            </div>
+
             <div class="card-body">
                 <h5 class="card-title">@product.Name</h5>
                 <p class="card-text">Quantity in cupboard: @product.Quantity</p>
